[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/Player/Attack.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Coin.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.1268, 15.731 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 201, 134, 67, 67 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 268, 134, 67, 67 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 603, 134, 67, 67 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 536, 134, 67, 67 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 469, 134, 67, 67 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 402, 134, 67, 67 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 335, 134, 67, 67 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Normal",
"speed": 12.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Init",
"speed": 15.0
} ]

[node name="Mega" type="Area2D" groups=[
"Coins",
]]
z_index = 1
script = ExtResource( 2 )
damage = 50
type = "Mega"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.121823, 0.134344 )
scale = Vector2( 1.91357, 1.78833 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.84457, -3.38898 )
frames = SubResource( 9 )
animation = "Init"
frame = 4
playing = true
flip_h = true
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
